# wagtail-tailwind-starter

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  fabfile.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  tailwind.config.js  webpack.config.js
.github/workflows/: workflow.yaml
dockerfiles/: Dockerfile.utils
website/: urls.py
website/images/: models.py
website/images/migrations/: 0001_initial.py
website/settings/: base.py  dev.py
website/templates/: base.html
