[tool.poetry]
name = "williamblackie.com"
version = "0.1.0"
description = ""
authors = ["William <william.blackie96@gmail.com>"]
license = "None"

[tool.poetry.dependencies]
python = "^3.8"
wagtail = "~2.15.1"
dj-database-url = "~0.5.0"
gunicorn = "~20.1.0"
psycopg2 = "^2.9.2"
sentry-sdk = "^1.5.1"
whitenoise = "^5.3.0"

[tool.poetry.dev-dependencies]
fabric = "~2.6.0"
stellar = "~0.4.5"
isort = "~5.10.1"
flake8 = "~4.0.1"
black = "~21.12b0"
pre-commit = "~2.16.0"
detect-secrets = "~1.1.0"

[tool.isort]
profile = "black"
src_paths = ["isort", "test"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
gunicorn = ["gunicorn"]